--- a/.eslintrc
+++ b/.eslintrc
@@ -1,29 +1,50 @@
 {
-	"env": {
-		"es6": true,
-		"browser": true,
-		"jquery": true
-	},
-	"extends": "airbnb",
-	"rules": {
-		// Disabled
-		"no-console": 0,
-		"no-extend-native": 0,
-		"no-tabs": 0,
-		"spaced-comment": 0,
-		"camelcase": 0,
-
-		// Errors
-		"indent": [1, "tab"],
-		"arrow-parens": [1, "as-needed"],
-		"func-names": [1, "never"],
-		"space-before-function-paren": [1, "never"],
-		"one-var-declaration-per-line": [1, "always"],
-
-		// Warnings
-		"one-var": [2, {
-			"uninitialized": "always",
-			"initialized": "always"
-		}],
-	}
+  "env": {
+    "es6": true,
+    "browser": true,
+    "jquery": true
+  },
+  "extends": "airbnb",
+  "rules": {
+    // Disabled
+    "no-extend-native": 0,
+    "no-tabs": 0,
+    "spaced-comment": 0,
+    "camelcase": 0,
+    // Errors
+    "indent": [
+      "error",
+      2
+    ],
+    "arrow-parens": [
+      1,
+      "as-needed"
+    ],
+    "func-names": [
+      1,
+      "never"
+    ],
+    "space-before-function-paren": [
+      1,
+      "never"
+    ],
+    "one-var-declaration-per-line": [
+      1,
+      "always"
+    ],
+    // Warnings
+    "no-console": 2,
+    "one-var": [
+      2,
+      {
+        "uninitialized": "always",
+        "initialized": "never"
+      }
+    ],
+  },
+  "plugins": [
+    "angular",
+    "html",
+    "import"
+  ]
 }
